# compliance-packet-api

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
js-sdk/: README.md  package-lock.json  package.json
js-sdk/src/: index.ts
python_sdk/: README.md  __init__.py  client.py  pyproject.toml  test-client.py
python_sdk/compliance_packet/: __init__.py  client.py
src/: db.ts  index.ts
src/sdk/: client.ts  test-sdk.ts
src/services/: llmevaluator.ts
src/types/: packet.ts
