[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-packet"
version = "0.1.1"
description = "Universal compliance packet SDK for Python."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.0"]

[project.urls]
Homepage = "https://your-frontend-url"
Source = "https://github.com/youruser/compliance-packet-api"